--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
 <main>
   <app-hero></app-hero>
   <app-services></app-services>
+  <app-place></app-place>
   <app-team></app-team>
   <app-method></app-method>
 </main>
