--- a/src/app/components/drawer/drawer.component.scss
+++ b/src/app/components/drawer/drawer.component.scss
@@ -1,4 +1,4 @@
-@use 'abstracts/container' as container;
+@use 'abstracts/containers' as containers;
 
 .drawer {
   position: fixed;
@@ -17,7 +17,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    @include container.container();
+    @include containers.container();
   }
   &__list {
     padding: 0;
