--- a/src/app/components/sections/method/method.component.scss
+++ b/src/app/components/sections/method/method.component.scss
@@ -1,12 +1,12 @@
-@use 'abstracts/container' as container;
+@use 'abstracts/containers' as containers;
+@use 'abstracts/buttons' as buttons;
 
 .method {
-  background-color: #ebe4db;
   padding-top: 100px;
   padding-bottom: 100px;
   &__container {
     box-sizing: border-box;
-    @include container.container();
+    @include containers.container();
   }
   &__header {
     text-align: center;
@@ -38,29 +38,18 @@
     align-items: center;
   }
   &__footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     text-align: center;
   }
   &__button {
-    font-size: 18px;
-    height: 54px;
-    border: none;
-    border-radius: 8px;
-    padding-left: 32px;
-    padding-right: 32px;
-    transition: background-color 0.3s ease-in-out;
-    cursor: pointer;
-
+    @include buttons.button();
     &--primary {
-      background-color: #ff8055;
-      color: white;
-
-      &:hover {
-        background-color: #d95e42;
-      }
-
-      &:active {
-        background-color: #c8523a;
-      }
+      @include buttons.button-variant(#ff8055, white, #d95e42, #c8523a);
+    }
+    &--secondary {
+      @include buttons.button-variant(white, #ff8055, #edd7d3ba, #e4c0bba3);
     }
   }
 }
