--- a/src/app/components/sections/services/services.component.scss
+++ b/src/app/components/sections/services/services.component.scss
@@ -1,4 +1,4 @@
-@use 'abstracts/container' as container;
+@use 'abstracts/containers' as containers;
 .services {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -13,6 +13,6 @@
     gap: 40px;
     justify-content: center;
     align-items: stretch;
-    @include container.container();
+    @include containers.container();
   }
 }
