Inicialização do Projeto

--- a/src/app/components/cards/member/member.component.html
+++ b/src/app/components/cards/member/member.component.html
@@ -10,7 +10,7 @@
     tabindex="0"
   >
     <h1 class="member__title">{{ name }}</h1>
-    <img class="member__arrow"  src="/images/components/cards/member/arrow.svg" alt="">
+    <img class="member__arrow" src="/images/widgets/arrow.svg" alt="">
     <p class="member__description">{{ description }}</p>
   </button>
 </div>
