--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,6 @@
 body {
   margin: 0;
   padding: 71px 0 0;
-  background-color: #f0ebe5;
+  background-color: #f4eee9;
   font-family: 'DM Sans', sans-serif;
 }
