--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,43 +1,31 @@
 <footer class="footer">
-  <div class="footer__container">
-    <div class="footer__top">
-      <div class="footer__icons">
-        <img src="" alt="icon1" />
-        <img src="" alt="icon2" />
-        <img src="" alt="icon3" />
-        <img src="" alt="icon4" />
-        <img src="" alt="icon5" />
-      </div>
-      <div class="footer__payments">
-        Formas de pagamento
-        <img src="/images/payments/amex.svg" alt="icon1" />
-        <img src="/images/payments/dinners.svg" alt="icon2" />
-        <img src="/images/payments/elo.svg" alt="icon3" />
-        <img src="/images/payments/hipercard.svg" alt="icon4" />
-        <img src="/images/payments/mastercard.svg" alt="icon5" />
-        <img src="/images/payments/mercado-pago.svg" alt="icon6" />
-        <img src="/images/payments/pix.svg" alt="icon7" />
-      </div>
-      <div class="footer__payments">
-        Principais paginas
-        <div>Serviços</div>
-        <div>Serviços</div>
-        <div>Serviços</div>
-        <div>Serviços</div>
-        <div>Serviços</div>
-        <div>Serviços</div>
-        <div>Serviços</div>
+  <div class="footer__section">
+    <div class="footer__container">
+      <div class="footer__top">
+
       </div>
     </div>
-    <div class="footer__divider"></div>
-    <div class="footer__bottom">
-      <p class="footer__description">
-        © 2024 Clínica Abertamente. Todos os direitos reservados.
-      </p>
-      <p class="footer__descriotion">
-        Desenvolvido por
-        <a class="footer__link" href="#" target="_blank">gCavalho</a>
-      </p>
+  </div>
+  <div class="footer__section">
+    <div class="footer__container">
+      <div class="footer__body">
+
+      </div>
+    </div>
+  </div>
+  <div class="footer__section">
+    <div class="footer__container">
+      <div class="footer__bottom">
+        <p class="footer__copyright">
+          Copyright © 2024
+          <span class="footer__brand">Clínica Abertamente</span>. Todos os
+          direitos reservados.
+        </p>
+        <p class="footer__credits">
+          Desenvolvido por
+          <a class="footer__developer" href="#" target="_blank">gCavalho.</a>
+        </p>
+      </div>
     </div>
   </div>
 </footer>
