--- a/src/app/components/sections/services/services.component.scss
+++ b/src/app/components/sections/services/services.component.scss
@@ -4,7 +4,7 @@
   padding-bottom: 100px;
   min-height: 400px;
   box-sizing: border-box;
-    background-color: #ebe4db;
+  background-color: #f0e9e3;
 
   &__grid {
     box-sizing: border-box;
