--- a/src/app/components/sections/team/team.component.scss
+++ b/src/app/components/sections/team/team.component.scss
@@ -2,7 +2,7 @@
 @use 'abstracts/buttons' as buttons;
 
 .team {
-  background-color: #ebe4db;
+  background-color: #f0e9e3;
   &__container {
     padding-top: 100px;
     padding-bottom: 100px;
