--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,14 +2,58 @@
   <div class="footer__section">
     <div class="footer__container">
       <div class="footer__top">
-
+        <h2 class="footer__title">Conecte-se consigo mesmo</h2>
+        <button class="footer__button footer__button--secondary">
+          Vamos conversar
+        </button>
       </div>
     </div>
   </div>
   <div class="footer__section">
     <div class="footer__container">
       <div class="footer__body">
-
+        <div class="footer__about">
+          <h2 class="footer__subtitle">Cliníca Abertamente</h2>
+          <p class="footer__description">
+            Oferecemos apoio emocional com escuta empática, cuidado profissional
+            e acolhimento para cada momento da sua jornada pessoal.
+          </p>
+          <div class="footer__networks">
+            <div class="footer__circle"><!--Apenas para teste--></div>
+            <div class="footer__circle"><!--Apenas para teste--></div>
+            <div class="footer__circle"><!--Apenas para teste--></div>
+            <div class="footer__circle"><!--Apenas para teste--></div>
+            <div class="footer__circle"><!--Apenas para teste--></div>
+          </div>
+        </div>
+        <div class="footer__payment">
+          <h2 class="footer__subtitle">Pagamento</h2>
+          <img src="/images/payments/amex.svg" alt="" />
+          <img src="/images/payments/dinners.svg" alt="" />
+          <img src="/images/payments/elo.svg" alt="" />
+          <img src="/images/payments/hipercard.svg" alt="" />
+          <img src="/images/payments/mastercard.svg" alt="" />
+          <img src="/images/payments/mercado-pago.svg" alt="" />
+          <img src="/images/payments/pix.svg" alt="" />
+        </div>
+        <div class="footer__contact">
+          <h2 class="footer__subtitle">Contato</h2>
+          <p class="footer__description">(43) 3337-7793</p>
+          <p class="footer__description">
+            oi{{ '@' }}clinicaabertamente.com.br
+          </p>
+          <p class="footer__description">
+            R. Belo Horizonte, 1558 - Centro, Londrina - PR, 86020-061
+          </p>
+          <p class="footer__description">Segunda à Sexta das 8:00 às 21:00</p>
+        </div>
+        <div class="footer__news">
+          <h2 class="footer__subtitle">Fique por dentro de novidades</h2>
+          <div class="footer__input-group">
+            <input class="footer__input" placeholder="Endereço de e-mail" />
+            <button class="footer__button-group">enviar</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
