--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,4 +1,5 @@
 @use 'abstracts/containers' as containers;
+@use 'abstracts/buttons' as buttons;
 
 .footer {
   background-color: #f0e9e3;
@@ -10,12 +11,118 @@
   &__section {
     border-top: 0.5px solid rgba(0, 0, 0, 0.1);
   }
+  &__title {
+    margin: 0;
+    padding: 0;
+    color: #076c68;
+  }
+  &__subtitle {
+    padding: 0;
+    font-size: 18px;
+    margin: 0 0 10px;
+    color: #076c68;
+  }
+  &__description {
+    margin: 0;
+    padding: 0;
+    max-width: 300px;
+    font-size: 15px;
+    color: #785d46;
+    font-weight: 500;
+  }
+  &__button {
+    @include buttons.button($height: 48px, $padding: 0 19px, $font-size: 16px);
+    &--secondary {
+      @include buttons.button-variant(
+        $bg-color: #076c68,
+        $text-color: #ffffff,
+        $hover-bg: #05524f,
+        $active-bg: #033e3c,
+      );
+    }
+  }
+  // Estilizações do top:
   &__top {
     height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+  // Estilizações do body:
   &__body {
-    height: 100px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
   }
+  &__payment {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    img {
+      width: 34px;
+      height: auto;
+    }
+  }
+  &__contact {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  &__news {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  &__about {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  &__networks {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  &__circle {
+    background-color: #076c68;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+  }
+  &__input-group {
+    background-color: white;
+    border-radius: 24px;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    max-width: 300px;
+    padding: 0;
+    overflow: hidden;
+  }
+  &__input {
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 5px 5px 5px 20px;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+  }
+  &__button-group {
+    background-color: #076c68;
+    color: white;
+    width: 150px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    cursor: pointer;
+  }
+  //Estilizações do bottom:
   &__bottom {
     height: 100px;
     display: flex;
