--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,5 @@
 @use 'abstracts/containers' as containers;
+@use 'abstracts/buttons' as buttons;
 .header {
   height: 71px;
   width: 100%;
@@ -54,17 +55,13 @@
     padding: 0;
     margin: 0;
     &--emphasis {
-      cursor: pointer;
-      box-sizing: border-box;
-      padding-left: 19px;
-      padding-right: 19px;
-      border-radius: 8px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 48px;
-      background-color: #076c68;
+      @include buttons.button($height: 48px, $padding: 0 19px, $font-size: 16px);
+      @include buttons.button-variant(
+          #076c68,   // cor de fundo
+          #ffffff,   // cor do texto
+          #05524f,   // cor no hover
+          #033e3c    // cor no active
+      );
     }
   }
   &__link {
