--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,24 +1,32 @@
 <footer class="footer">
-  <div class="footer__section">
+  <div class="footer__section footer__section--emphasis">
     <div class="footer__container">
       <div class="footer__top">
-        <h2 class="footer__title">Conecte-se consigo mesmo</h2>
-        <button class="footer__button footer__button--secondary">
-          Vamos conversar
-        </button>
+        <h2 class="footer__title">Fique por dentro de novidades</h2>
+        <p class="footer__text">
+          Inscreva-se e seja o primeiro a saber sobre as novidades, promoções e
+          muito mais!
+        </p>
+        <div class="footer__fg">
+          <input
+            class="footer__fg-input"
+            placeholder="Cadastre seu e-mail..."
+          />
+          <button class="footer__fg-button">enviar</button>
+        </div>
       </div>
     </div>
   </div>
   <div class="footer__section">
     <div class="footer__container">
       <div class="footer__body">
-        <div class="footer__about">
-          <h2 class="footer__subtitle">Cliníca Abertamente</h2>
-          <p class="footer__description">
+        <div class="footer__column">
+          <h2 class="footer__title">Clínica Abertamente</h2>
+          <p class="footer__text">
             Oferecemos apoio emocional com escuta empática, cuidado profissional
             e acolhimento para cada momento da sua jornada pessoal.
           </p>
-          <div class="footer__networks">
+          <div class="footer__row">
             <div class="footer__circle"><!--Apenas para teste--></div>
             <div class="footer__circle"><!--Apenas para teste--></div>
             <div class="footer__circle"><!--Apenas para teste--></div>
@@ -26,48 +34,58 @@
             <div class="footer__circle"><!--Apenas para teste--></div>
           </div>
         </div>
-        <div class="footer__payment">
-          <h2 class="footer__subtitle">Pagamento</h2>
-          <img src="/images/payments/amex.svg" alt="" />
-          <img src="/images/payments/dinners.svg" alt="" />
-          <img src="/images/payments/elo.svg" alt="" />
-          <img src="/images/payments/hipercard.svg" alt="" />
-          <img src="/images/payments/mastercard.svg" alt="" />
-          <img src="/images/payments/mercado-pago.svg" alt="" />
+        <div class="footer__column">
+          <h2 class="footer__title">Pagamento</h2>
+          <div class="footer__row">
+            <img src="/images/payments/amex.svg" alt="" />
+            <img src="/images/payments/dinners.svg" alt="" />
+          </div>
+
+          <div class="footer__row">
+            <img src="/images/payments/elo.svg" alt="" />
+            <img src="/images/payments/hipercard.svg" alt="" />
+          </div>
+
+          <div class="footer__row">
+            <img src="/images/payments/mastercard.svg" alt="" />
+            <img src="/images/payments/mercado-pago.svg" alt="" />
+          </div>
+
           <img src="/images/payments/pix.svg" alt="" />
         </div>
-        <div class="footer__contact">
-          <h2 class="footer__subtitle">Contato</h2>
-          <p class="footer__description">(43) 3337-7793</p>
-          <p class="footer__description">
-            oi{{ '@' }}clinicaabertamente.com.br
-          </p>
-          <p class="footer__description">
+        <div class="footer__column">
+          <h2 class="footer__title">Navegação</h2>
+          <p class="footer__text">Início</p>
+          <p class="footer__text">Serviços</p>
+          <p class="footer__text">Espaço</p>
+          <p class="footer__text">Equipe</p>
+          <p class="footer__text">Metodologia</p>
+          <p class="footer__text">Localização</p>
+          <p class="footer__text">Nosso blog</p>
+        </div>
+        <div class="footer__column">
+          <h2 class="footer__title">Contato</h2>
+          <p class="footer__text">(43) 3337-7793</p>
+          <p class="footer__text">oi{{ '@' }}clinicaabertamente.com.br</p>
+          <p class="footer__text">
             R. Belo Horizonte, 1558 - Centro, Londrina - PR, 86020-061
           </p>
-          <p class="footer__description">Segunda à Sexta das 8:00 às 21:00</p>
-        </div>
-        <div class="footer__news">
-          <h2 class="footer__subtitle">Fique por dentro de novidades</h2>
-          <div class="footer__input-group">
-            <input class="footer__input" placeholder="Endereço de e-mail" />
-            <button class="footer__button-group">enviar</button>
-          </div>
+          <p class="footer__text">Segunda à Sexta das 8:00 às 21:00</p>
         </div>
       </div>
     </div>
   </div>
-  <div class="footer__section">
+  <div class="footer__section footer__section--emphasis">
     <div class="footer__container">
       <div class="footer__bottom">
-        <p class="footer__copyright">
+        <p class="footer__legal">
           Copyright © 2024
-          <span class="footer__brand">Clínica Abertamente</span>. Todos os
-          direitos reservados.
+          <span class="footer__legal-emphasis">Clínica Abertamente</span>. Todos
+          os direitos reservados.
         </p>
-        <p class="footer__credits">
+        <p class="footer__legal">
           Desenvolvido por
-          <a class="footer__developer" href="#" target="_blank">gCavalho.</a>
+          <a class="footer__legal-link" href="#" target="_blank">gCavalho.</a>
         </p>
       </div>
     </div>
