--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,54 +1,21 @@
 @use 'abstracts/containers' as containers;
 @use 'abstracts/buttons' as buttons;
+@use 'abstracts/field-groups' as field-groups;
 
 .footer {
-  background-color: #f0e9e3;
+  background-color: #f8f4f0;
   &__container {
     height: 100%;
     box-sizing: border-box;
     @include containers.container();
   }
-  &__section {
-    border-top: 0.5px solid rgba(0, 0, 0, 0.1);
-  }
-  &__title {
-    margin: 0;
-    padding: 0;
-    color: #076c68;
-  }
-  &__subtitle {
-    padding: 0;
-    font-size: 18px;
-    margin: 0 0 10px;
-    color: #076c68;
-  }
-  &__description {
-    margin: 0;
-    padding: 0;
-    max-width: 300px;
-    font-size: 15px;
-    color: #785d46;
-    font-weight: 500;
-  }
-  &__button {
-    @include buttons.button($height: 48px, $padding: 0 19px, $font-size: 16px);
-    &--secondary {
-      @include buttons.button-variant(
-        $bg-color: #076c68,
-        $text-color: #ffffff,
-        $hover-bg: #05524f,
-        $active-bg: #033e3c,
-      );
-    }
-  }
-  // Estilizações do top:
   &__top {
     height: 100px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
+    justify-content: space-between;
   }
-  // Estilizações do body:
   &__body {
     padding-top: 40px;
     padding-bottom: 40px;
@@ -58,71 +25,6 @@
     align-items: start;
     justify-content: space-between;
   }
-  &__payment {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    img {
-      width: 34px;
-      height: auto;
-    }
-  }
-  &__contact {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  &__news {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  &__about {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  &__networks {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-  }
-  &__circle {
-    background-color: #076c68;
-    width: 34px;
-    height: 34px;
-    border-radius: 50%;
-  }
-  &__input-group {
-    background-color: white;
-    border-radius: 24px;
-    height: 40px;
-    display: flex;
-    flex-direction: row;
-    max-width: 300px;
-    padding: 0;
-    overflow: hidden;
-  }
-  &__input {
-    background-color: transparent;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 5px 5px 5px 20px;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-  }
-  &__button-group {
-    background-color: #076c68;
-    color: white;
-    width: 150px;
-    margin: 0;
-    padding: 0;
-    border: none;
-    cursor: pointer;
-  }
-  //Estilizações do bottom:
   &__bottom {
     height: 100px;
     display: flex;
@@ -130,20 +32,83 @@
     justify-content: space-between;
     align-items: center;
   }
-  &__copyright,
-  &__credits {
-    font-weight: 460;
-    color: #076c68;
+  &__section {
+    border-top: 0.5px solid rgba(0, 0, 0, 0.1);
+    &--emphasis {
+      background-color: #f4eee9;
+    }
+  }
+  &__column {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  &__row {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  &__title {
     padding: 0;
+    font-size: 18px;
     margin: 0;
-  }
-  &__developer {
     color: #076c68;
-    text-decoration: none;
-    font-weight: 460;
   }
-  &__brand {
-    color: #ff8055;
-    font-weight: 550;
+  &__text {
+    margin: 0;
+    padding: 0;
+    max-width: 350px;
+    font-size: 15px;
+    color: rgba(7, 108, 104, 0.77);
+    font-weight: 500;
+  }
+  &__legal {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    color: #076c68;
+    font-weight: 460;
+    &-emphasis{
+      color: #ff8055;
+      font-weight: 530;
+    }
+    &-link{
+      color: inherit;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+  &__button {
+    @include buttons.button($height: 48px, $padding: 0 19px, $font-size: 16px);
+    &--secondary {
+      @include buttons.button-variant(
+        $bg-color: #076c68,
+        $text-color: #ffffff,
+        $hover-bg: #05524f,
+        $active-bg: #033e3c
+      );
+    }
+  }
+  img {
+    width: 34px;
+    height: auto;
+  }
+  &__circle {
+    background-color: #ffffff;
+    border: 1px solid #076c68;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+  }
+  &__fg {
+    @include field-groups.fg;
+
+    &-input {
+      @include field-groups.fg-input;
+    }
+
+    &-button {
+      @include field-groups.fg-button;
+    }
   }
 }
